# audio_co_pilot

./: .gitignore  CMakeLists.txt  README.md  RODAR.sh  RUN_ME.sh  monitor_logs.sh  run_with_logs.sh  show_logs.sh
Assets/Brand/: AppIcon.icns
Nova Pasta Com Itens/: AudioCoPilot_2026-01-12_02-01-50.txt  AudioCoPilot_2026-01-12_02-07-40.txt  AudioCoPilot_2026-01-12_02-24-07.txt  AudioCoPilot_2026-01-12_02-26-19.txt  AudioCoPilot_2026-01-12_02-32-18.txt  AudioCoPilot_2026-01-12_02-36-01.txt  AudioCoPilot_2026-01-12_02-45-21.txt  AudioCoPilot_2026-01-12_02-50-32.txt  AudioCoPilot_2026-01-12_02-54-55.txt  AudioCoPilot_2026-01-12_03-00-54.txt  AudioCoPilot_2026-01-12_03-06-17.txt  AudioCoPilot_2026-01-12_03-12-23.txt  AudioCoPilot_2026-01-12_03-13-44.txt
Source/: JuceHeader.h  Main.cpp
Source/Core/: AudioEngine.cpp  AudioEngine.h  DeviceManager.cpp  DeviceManager.h  DeviceStateModel.cpp  DeviceStateModel.h
Source/Core/TransferFunction/: FFTAnalyzer.cpp  FFTAnalyzer.h  TFAutoAnalyzer.cpp  TFAutoAnalyzer.h  TFController.cpp  TFController.h  TFKnowledgeBase.cpp  TFKnowledgeBase.h  TFProcessor.cpp  TFProcessor.h
Source/Localization/: LocalizedStrings.cpp  LocalizedStrings.h
Source/Menu/: MenuBarModel.cpp  MenuBarModel.h
Source/Modules/AIStageHand/: AIStageHandAnalyzer.cpp  AIStageHandAnalyzer.h  AIStageHandController.cpp  AIStageHandController.h  AIStageHandFifo.cpp  AIStageHandFifo.h  AIStageHandView.cpp  AIStageHandView.h
Source/Modules/AntiMasking/: AISuggestionsEngine.h  AntiMaskingController.cpp  AntiMaskingController.h  AntiMaskingProcessor.cpp  AntiMaskingProcessor.h  AntiMaskingView.cpp  AntiMaskingView.h  BarkAnalyzer.cpp  BarkAnalyzer.h  BarkSpectrumDisplay.h  MaskingCalculator.cpp  MaskingCalculator.h  MaskingMatrixDisplay.h  SpreadingFunction.cpp  SpreadingFunction.h
Source/Modules/RTA/: RTAController.cpp  RTAController.h  RTAProcessor.cpp  RTAProcessor.h  RTAView.cpp  RTAView.h
Source/UI/: ChannelMeterComponent.cpp  ChannelMeterComponent.h  DeviceSelectorComponent.cpp  DeviceSelectorComponent.h  MacDockIcon.mm  MainWindow.cpp  MainWindow.h
Source/UI/DesignSystem/: Colours.h  DesignSystem.h  Spacing.h  Typography.h
Source/UI/LookAndFeel/: IndustrialLookAndFeel.cpp  IndustrialLookAndFeel.h
Source/UI/TransferFunction/: MagnitudePlotComponent.cpp  MagnitudePlotComponent.h  PhasePlotComponent.cpp  PhasePlotComponent.h  TFAutoSuggestionsComponent.cpp  TFAutoSuggestionsComponent.h  TransferFunctionView.cpp  TransferFunctionView.h
